unknown35
CAS83_05285
vsr
J582_0124
CBI29_04413
unknown543
unknown1516
unknown851
unknown4190
unknown158
wafY
tagO
unknown437
unknown1700
unknown749
cioB
unknown1327
nucS
unknown1748
unknown3025
NG19_0017
CPI82_17115
ABZJ_00946
unknown1395
unknown1501
unknown4748
ABSDF1043
ABAYE3212
unknown6835
ACINNAV82_1249
HMPREF0016_00875
csy3
ABAYE1078
chnY
unknown3819
unknown2168
unknown3602
J517_1902
lly
hsdS
IEC338SC_3220
ECA2911
J512_2851
APC94_20190
unknown3530
unknown27
sumf
unknown4186
B9X91_26935
BGC29_17570
ABAYE1229
ABUW_0364
J635_4361
A7N09_20000
yoeB
unknown596
BG61_17040
unknown2053
unknown2329
unknown1624
MS2127
BIT33_18720
J635_2548
F910_01215
unknown1459
fah
blt
CIL08_00425
unknown4206
J529_3671
unknown1179
BMY_2099
unknown3527
APC94_13925
J567_3269
P23_2067
unknown4257
unknown1958
CHL_0373
unknown2364
dmpG
unknown3554
BGC29_16910
unknown7194
unknown842
unknown1959
unknown1167
unknown519
unknown760
unknown4
cinH
T630_0688
unknown1617
ymfD
AZE33_18890
unknown2332
unknown650
BGC29_02135
unknown1719
BVD86_11445
NG19_0028
A7N09_15995
unknown1300
pA_00099
ybeA
unknown447
unknown1400
plu3939
ompA_2
CAS83_20640
unknown712
L292_3092
J658_3393
pQBR0240
mutL_2
unknown1688
unknown2355
J518_3851
ABSDF2750
unknown171
unknown5088
cvaB
B9T27_03300
lysE
tox
pglD
CEJ63_19400
CME41_02610
unknown2352
CPI82_00395
unknown2554
F913_00987
unknown2101
unknown3525
AZE33_13080
p3ABAYE0084
unknown1278
unknown4199
IX87_21250
unknown771
unknown709
unknown1457
unknown990
BGC29_17720
p3ABAYE0038
J517_3590
ABAYE1740
unknown1089
F931_01607
CSB68_4032
T630_1322
unknown1397
Noc_0074
BGC29_12410
otnK
unknown1850
J506_2830
unknown154
atr4
unknown5816
PKB_3265
pld1
hapD
unknown2994
hepA
T630_3297
NG19_0088
BIT33_14600
BFR91_07040
unknown172
cspB
unknown1418
ABSDF2262
unknown2698
unknown797
unknown1074
J567_0257
J584_2860
unknown2907
p3ABAYE0082
unknown1855
unknown4198
NG19_0070
YH64_07050
unknown458
unknown2945
unknown815
gam
unknown1767
SAMN04487817_101314
ftsH3
ABUW_3329
sldA
unknown991
unknown484
intA
BGC29_17550
ABAYE3214
J596_4045
unknown896
unknown669
unknown2466
resP
J560_1570
unknown1789
J567_1076
ABAYE1260
J610_3097
NCTC7364_03861
ABUW_0766
unknown9419
unknown1556
B9X95_02695
ABAYE1265
unknown631
J635_2555
unknown1255
dddP
pilT_1
unknown10356
unknown3982
unknown2478
unknown504
unknown4201
unknown2437
A7N09_16080
ABSDF2469
J518_0840
unknown765
APC94_14100
unknown1093
CPI82_00385
unknown769
J804_4010
unknown1162
J560_1575
unknown1244
CW311_08525
OTEC02_09365
unknown1594
fabG_1
J506_3431
unknown2555
ordL
A7N09_20020
W5S_0516
unknown787
unknown3836
BGC29_05570
NG19_0091
unknown761
BGC29_17535
unknown438
unknown1681
dgdA
unknown639
J715_0926
J560_2351
J715_2117
AB994_3862
unknown88
unknown1944
ABUW_1434
unknown2155
vapC
B9X95_02475
J541_3377
J715_0923
ahpD
yjbM
ABAYE0566
p3ABAYE0052
unknown1113
unknown1744
p3ABAYE0078
unknown2172
unknown660
unknown2302
atr25
unknown1680
J582_1037
A7M79_05035
HALO0356
dmpO
ABUW_1994
unknown1239
unknown1499
unknown755
unknown2451
unknown576
unknown571
unknown870
unknown4258
ACIAD1847
hcaR_2
unknown84
unknown1664
B9X95_02715
unknown1711
unknown1415
BGC29_12620
unknown1653
J518_4032
unknown444
unknown1549
CL491_11895
unknown28
unknown2911
CAT00_08340
IX87_19940
APC94_13665
unknown1589
unknown625
ABSDF2587
F885_03622
unknown25
unknown875
J635_0822
CV948_021670
unknown5671
A0J50_18505
J690_3874
yjhB
T630_2384
unknown1615
NCTC7364_00398
unknown246
B9X91_05280
C5H40_09250
unknown2151
p3ABAYE0100
shlB
hxsB
unknown1317
unknown863
ABAYE0120
C2U32_17935
desC
J633_3904
salR
unknown87
unknown454
F985_03628
mhpT
unknown595
unknown2212
ACINNAV82_0628
unknown823
stp
unknown2333
unknown5015
unknown2362
CBI29_04438
CHQ89_16110
unknown1266
Vcrx040
BTW00_03985
unknown1546
SAMN02982990_02319
unknown810
J524_4007
unknown3095
unknown2257
unknown4191
efe_2
repM
B9X62_08560
unknown816
AB895_0915
NCTC7364_01027
CAT00_08510
J608_5716
P23_1863
unknown1297
Bpet0222
unknown3576
J517_3770
unknown4192
drrC
plu0153
unknown5938
ahdIC
unknown1042
ABAYE3202
unknown1188
unknown1417
unknown1435
unknown3783
unknown3433
unknown10359
ABSDF1784
pseH
unknown1693
hxsC
A7N09_16315
ABSDF1029
ABAYE2501
J518_0073
unknown1163
orf44
CAT00_08370
unknown1603
unknown66
F962_03135
unknown3880
unknown2322
unknown2360
unknown9438
unknown2134
pphB
unknown1195
nagI
unknown1627
unknown1448
unknown1408
cln
irlR
A7M79_05820
unknown920
unknown1160
NCTC7364_03931
unknown1249
int3
T630_2866
unknown1142
unknown696
unknown1961
nin
unknown1154
J584_2620
BGC29_05715
cmlA
GEM_5845
J506_3978
unknown1996
unknown3969
A7M90_16000
CAS83_17925
unknown3522
hscC
D
ABSDF2773
NG19_0012
J635_2551
wbpL
A0J50_18240
unknown1995
unknown425
unknown6473
unknown618
pBPS093
unknown728
A7M90_19470
p3ABAYE0072
unknown1310
KKY_952
unknown1118
A7M90_18715
unknown2705
NG19_0072
lgaC
CTR2_1144
unknown236
NG19_0089
unknown3253
orf2
CPI82_13775
unknown2627
unknown4066
unknown1314
B9X91_11440
J532_3865
ruvC_2
unknown835
J506_3339
ABSDF1451
unknown900
unknown1814
unknown1710
unknown509
IX87_19955
unknown801
unknown2097
B9X91_20310
wahE
unknown554
P23_2475
HMP0015_3474
sat2
ACIAD1499
A7M90_19460
pSD853_174_65
J524_0902
L533_3845
J529_3127
yidH
unknown2485
unknown793
xtmA
J512_4073
unknown1673
unknown988
J532_1625
chrB
unknown1257
unknown1656
NG19_0016
BWP00_05425
unknown1069
unknown6138
unknown629
PM0697
ABAYE2719
unknown2454
unknown3984
hkaL
unknown1147
ABAYE1273
unknown1739
Noc_0283
unknown936
unknown220
ABUW_1324
NG19_0025
4
alcA
NG19_0077
BFR63_02215
unknown1777
BS636_15935
M3Q_pABCC71
ABUW_1417
J560_1496
BGC29_12560
unknown2109
J635_4026
unknown1474
ACBK50_PK50B_0003
unknown821
ycjY
B9X80_16270
fdtB
BVD86_04970
ABSDF_p20031
unknown792
frpC2
unknown1632
ABAYE2446
unknown497
unknown3096
CKG20_09670
unknown624
unknown784
unknown3631
C3F34_20105
L533_3843
ABSDF2476
unknown1356
istB-2
REG_0078
unknown1067
unknown2095
unknown1135
araJ
BS636_15895
trbI
unknown1445
J658_3396
unknown2808
unknown4211
unknown5936
unknown1110
NG19_0078
unknown2146
SAMN02745664_101279
unknown281
unknown1311
J532_3812
pnpC
P23_2477
lamB
unknown1649
HH_0050
traY
unknown3519
unknown3371
CU320_14545
BGC29_11405
KU39_3p209
unknown1330
gtrOC5
cusB
parA
unknown3948
unknown1124
cro
hpaE
hpaF
YA64_15895
unknown668
IX87_21245
unknown742
J529_0997
CHQ89_01895
NCTC7364_03869
unknown2433
copB_3
J584_2854
stbA
flgJ
cvaA
P23_1234
RL3038
TetR
unknown2671
rhaT
unknown723
p3ABAYE0105
IEC338SC_3524
mphM
NG19_0079
unknown508
unknown829
unknown2359
efe
unknown466
ABW55_10230
unknown1604
unknown1554
selP
F910_01217
unknown1687
A7N09_16225
CAT00_10890
unknown1494
unknown1156
unknown1128
NG19_0084
unknown791
rep3
CHQ89_01930
C7D81_07600
unknown413
p3ABAYE0112
MDS_4212
CAS83_12120
CFE48_07005
yesN
unknown550
J635_4395
A7M90_07355
bmpA
cas3
unknown1543
unknown1066
unknown2335
SAMN02799632_01168
Y1041
ACIAD0940
J582_2348
unknown1253
unknown2443
unknown1326
unknown934
capM
unknown8827
unknown1088
unknown140
unknown1496
unknown6249
unknown4208
NG19_0020
unknown841
unknown1092
NG19_0075
ALO85_200053
unknown3427
BGC29_01965
unknown1939
unknown569
unknown1073
unknown3988
unknown2137
CBI29_01982
B9X68_08910
unknown798
unknown1123
unknown5089
unknown513
unknown320
unknown854
unknown1350
APC94_13915
unknown1155
unknown397
ASF04_23865
BGC29_05575
CAS83_17750
wcaJ
BGN93_20935
unknown2912
DN31_191
unknown455
ACIAD0168
nifA
J715_4176
merC
unknown95
IX87_21315
unknown1064
NG19_0011
unknown1325
BWP00_10060
unknown3987
ABSDF2467
BN1235_p15
CV955_0014410
AB994_3893
BEN76_14340
A0J50_18500
J518_4145
thiF
BCAM1074
ABAYE0546
IX87_11470
unknown2523
unknown713
arsH
unknown805
ABAYE2175
CAS83_16895
unknown2343
cspA
unknown3542
gp2
ABAYE2712
BS098_19950
J529_3309
unknown1482
unknown838
cusF
mobL
yjcS
capG
unknown524
BAV1951
ABAYE3210
unknown1531
roi
ligB
unknown495
J690_1629
unknown308
csy4
ABSDF_p30022
unknown2100
traJ
unknown3512
unknown211
unknown4197
F885_03613
unknown1561
CHQ89_00255
unknown1534
SAMN04488490_2159
unknown1706
ABSDF1751
fldA
T630_2735
unknown1523
unknown1312
rmlD
unknown591
unknown3520
hpaR
CIL08_17970
J560_3437
dctB
BIT33_04875
BGC29_12590
yerI
unknown906
unknown1830
F889_01293
unknown1780
mcrB
J518_1655
rtrR
unknown1256
CIL08_04970
unknown814
unknown785
unknown1134
unknown1091
RPSI07_mp0096
M3Q_pABCC87
unknown2235
unknown1116
pVT1_57
gpO
unknown581
J508_3225
unknown1063
unknown3511
unknown499
unknown822
virS
unknown597
wapA
unknown666
unknown3979
p3ABAYE0037
unknown2142
hpaA
J804_0712
dpoL
J512_0610
unknown1473
unknown1328
T630_1959
hpaI
unknown2656
J580_0982
unknown1490
unknown806
msi090
nrp
unknown2669
LV38_03985
A7M90_15935
alpA
unknown276
T630_1173
unknown1402
AC057_16245
A7M90_18725
rsbQ
unknown1245
unknown1193
unknown604
unknown1121
unknown1112
cbh
NG19_0015
unknown874
J517_3644
lpari_03049
P23_0501
wdaL
ybfA
ABSDF1318
p1ABAYE0001
unknown1992
ABSDF2479
unknown280
ABUW_1386
bgla_1g01330
unknown1666
azo0355
AZOBR_p340114
unknown1251
MCA2927
unknown1146
wbqH
NMO_0787
cobC_1
unknown3483
crtN
BGC29_02960
unknown2879
unknown467
ACINNAV82_1416
J507_0551
unknown1781
ABAC_0066
CAS83_06930
IX87_20075
unknown589
unknown5130
AM1_2402
unknown1398
unknown97
unknown450
IX87_20030
unknown4266
unknown688
unknown663
p4ABAYE0002
unknown3840
BIT33_13695
J532_2344
yedA_3
P23_0878
unknown4745
unknown3022
unknown2480
czcO
MUS_2446
unknown1491
ABSDF1009
unknown247
BVD86_09780
unknown2319
unknown613
T630_2387
BWP00_20085
P23_0945
atr3
J537_3059
J658_3875
unknown1299
WA1_09715
CAS83_11270
NCTC7364_03864
unknown1432
unknown1180
unknown729
J804_3006
P23_2844
CAS83_13655
unknown1620
unknown617
recD_2
CPI82_00240
J633_4106
B4R90_16795
APC94_04815
unknown7438
p3SP-NDM_0049
unknown2356
estS
unknown1189
ABW55_08340
unknown695
creD
Nwat_3151
unknown4065
unknown2148
unknown528
CHQ89_00215
unknown3000
DN30_244
unknown2354
ASF86_05610
J506_2446
ABAYE3074
RSc1680
unknown445
BCAM0114
BGC29_17775
J608_4069
ASF86_04330
unknown532
unknown662
unknown2468
F925_00132
J567_2859
J517_0889
unknown69
BMU11_10390
unknown2484
ABAYE0532
ACINWC323_1783
unknown94
unknown935
hyaD
C5H40_20085
unknown146
unknown626
nagX
unknown522
J584_2858
unknown446
unknown1686
unknown1915
APC94_09890
B9X91_04860
DM43_3466
unknown914
unknown820
CU320_14865
cya
B9X91_20295
TOL_0522
NG19_007
unknown736
unknown324
unknown2005
lgaD
cesD
unknown722
unknown643
B4R90_11045
J532_2710
CAS83_09100
unknown1518
T630_2405
ABUW_1991
unknown322
ACINWC136_3231
ecf
unknown1535
CAS83_11315
unknown1454
unknown1804
CAT00_08280
unknown2470
A0J50_18235
unknown2262
unknown3983
NCTC7364_03881
draG
CXK94_21190
entC
rpoE
unknown4652
C7D81_08290
unknown1138
unknown2312
A7M90_18565
rt3
unknown3781
unknown1051
AB237_0964
unknown715
gtr11
unknown3507
unknown1431
CPI82_09780
unknown553
hpaC
unknown4189
xre
unknown61
unknown850
ABAYE0573
unknown1305
C5H40_20165
NT90_15810
unknown2002
soj_1
J560_4053
J805_4087
hicB
unknown96
J715_1945
yafN
J715_0951
pnaE
CAT00_08325
APC94_13670
unknown242
unknown5127
A0J50_14640
unknown1301
CAS83_08455
BGC29_17595
IX87_19875
NG19_0022
unknown1430
A7M79_03935
p3ABAYE0081
CBI29_04418
unknown2528
unknown780
unknown764
B4R90_11075
J512_3872
yjgH
unknown1302
unknown1713
unknown1547
IEC338SC_3279
AL533_13115
sbcE
unknown4173
IX87_06070
unknown1631
unknown848
NG19_0041
rmlC
J518_1681
ABAYE3209
unknown866
NCTC7364_03944
unknown1655
unknown85
unknown502
unknown5658
unknown2233
ABAYE1270
BUC_0564
unknown818
unknown5250
rfbC
ybjA
CIL08_17955
C3F34_14845
J610_3079
P23_2832
unknown2434
BIT33_05460
unknown1590
unknown26
unknown1684
tfpZ
unknown1289
unknown449
PPS_1244
bm3R1_1
istA
unknown5129
unknown1479
unknown1114
unknown1679
unknown717
lcrS
qhbB
unknown2138
unknown2688
NCTC7364_03899
AB994_3860
btr_1
unknown1742
unknown757
p3ABAYE0108
unknown2441
wbdM
IEC338SC_3074
J506_2989
unknown2156
AL489_004775
gst3
unknown4352
A2W44_03315
unknown1157
CAT59_00010
unknown3878
unknown904
unknown1386
F985_01928
nonR
unknown2098
BGC29_17780
ABSDF2466
mphP
norM_3
pemI
unknown1698
BGC29_14590
unknown4747
unknown2000
unknown2541
entD
NCTC7364_00602
soxC4
intI2
J567_2270
unknown3967
unknown525
unknown1769
unknown1709
5
unknown4214
unknown903
unknown1385
IEC338SC_3273
NCTC7364_03910
unknown1389
unknown1511
mphK
J560_3406
YE0860
pNDM5_WCHEC0215_00013
J804_3005
BIT33_05655
unknown2896
unknown182
hipA
unknown1608
J608_5008
pin
unknown1286
GOX2477
unknown2672
P23_0678
MU9_2354
unknown2448
gnaB
unknown1537
B
T630_2679
CAS83_09110
unknown572
relB
J532_3426
unknown4004
J610_0474
J560_4572
J532_0762
CV949_019865
unknown907
unknown1497
nucH
yee
unknown529
mhpD
NG19_0073
unknown2330
unknown2552
J506_3127
unknown1324
T630_2201
F913_01219
unknown23
B9X91_16175
smc_3
NG19_0090
Vcrx037
ABSDF1749
J560_4532
BIT33_00160
AbaIHSS3526_15545
B9X95_00720
ABAYE0554
ABAYE0840
J658_2232
B9X80_04630
unknown1392
F922_00120
PA0820
ywnA
areB
YE4187
unknown1527
unknown1044
J567_2978
unknown277
bphJ
unknown270
unknown4333
unknown883
unknown1663
C7D81_08590
unknown1659
rfbB
NCTC7364_02521
unknown453
unknown1560
B9X95_02780
pmgT
A7M90_06425
unknown302
unknown3097
unknown2465
pWR501_0269
unknown1258
ABW55_08345
fii1
J804_2993
ACINNAV57_A0078
unknown1145
unknown278
unknown5090
wafF
gtr100
unknown245
BGC29_17675
zeta
C3F34_13290
unknown1115
wvaQ
J663_1193
zneP
unknown2676
rumA
hspA
lgaH
unknown4182
B9X91_10025
benP
unknown3014
unknown1704
cirA_1
NG19_0083
T630_2734
hcpC_3
unknown1235
AC057_06930
merA
PJ15_2119
wahF
A0J50_00320
unknown1318
J522_3967
BIT33_18730
cyaD
unknown91
unknown1991
ABSDF2795
unknown5939
unknown2160
A7A65_08080
gsiD
ndmB
unknown636
ABAYE1236
J551_3832
APC94_11790
unknown1237
traM
NG19_0034
ABAYE0839
unknown3638
unknown4805
unknown1650
mhpB
ABAYE0786
J529_2027
unknown2201
ycfD
CAS83_17860
mphL
bcere0024_021180
APC94_13605
NG19_0087
unknown496
J532_0335
unknown2898
abct
NCTC7364_03913
unknown3964
tnsA
unknown2166
unknown609
CL490_03840
unknown378
unknown6055
unknown3004
unknown1127
unknown3523
uvrB_1
unknown3986
crpA
eptA
unknown1954
ABSDF1026
ABAYE3072
BGC29_16765
elbB
unknown993
unknown3980
unknown3973
CAS83_09350
J529_0759
NCTC7364_00816
NG19_0094
F885_03618
unknown1697
ABAYE1351
BWP00_13445
unknown4331
wahM
P23_0255
unknown3985
unknown1175
unknown1375
unknown1635
ACNJC6_00518
unknown6837
iclR_5
APC53_02090
ACIN5021_2206
J518_1909
unknown549
M3Q_pABCC74
unknown803
SO_A0069
J715_0344
NG19_0010
J524_3705
J690_0074
prkC
unknown1934
PMI0936
unknown577
unknown440
unknown667
unknown1199
unknown800
C3F34_20175
unknown1548
unknown515
unknown4135
unknown1665
LV38_01156
unknown3489
NG19_002
AVENLUH13518_01160
unknown1303
unknown849
unknown228
unknown1291
T630_2360
pilE
unknown551
C2U32_18940
J506_3427
NG19_0074
B9T24_10130
unknown347
unknown2367
p3ABAYE0010
rmlB
unknown67
unknown601
IX87_21275
unknown1377
J567_0245
unknown282
ydiO
unknown1196
ABSDF2468
CHQ89_16935
unknown1562
NCTC7364_03681
J596_3557
J517_0587
J567_2081
NG19_0031
unknown565
AL533_13130
trbN
merP
unknown2357
novN
unknown648
unknown273
citN
unknown635
ACINWC141_0124
udg
RCFBP_11712
podJ_3
brxC
unknown2105
ACIAD1844
CIL08_00265
unknown3977
unknown31
J518_4276
A7M90_16045
cas9
unknown507
unknown2083
NG19_0044
cfa
hpaH
unknown2020
unknown451
ORF29
unknown4181
LV38_02481
unknown460
OU5_2041
unknown2779
APC94_05375
unknown1807
unknown614
unknown582
wbyC
unknown687
orf96
tnsC
fic
J529_3411
BIT33_14550
ncrA
ACIAD2771
hcpC_1
unknown878
unknown4184
F905_02489
unknown1705
DR95_403
NCTC7364_00107
unknown2475
B9X68_10050
CAT00_08375
unknown1626
J804_3941
ABSDF1757
unknown1500
unknown1805
unknown1552
unknown2351
unknown2311
unknown1295
unknown5
unknown90
A7N09_18395
unknown3112
unknown2363
T630_2885
unknown1208
colS
A7M90_18645
galD
unknown1786
pphA
glf
wafP
NG19_0071
entE
T630_3377
rosmuc_04028
ABAYE1763
CBE85_20175
unknown2427
unknown2173
hisN
unknown2901
F910_01118
mprB
NY08_337
unknown2449
unknown574
B9X91_19475
unknown678
H125_03874
AB895_3298
B9X95_13045
p3ABAYE0039
unknown1829
ABAYE2502
livQ
CAS83_09075
puuC
czcS
unknown3113
NG19_003
AL533_05990
elaA
hcaF
unknown1099
J622_01511
unknown677
unknown1645
ABSDF1763
Aba7804_04195
J518_0167
yeeB
plu1205
unknown2130
BGC29_17565
unknown1598
unknown598
unknown2306
unknown3222
bpoC
ACINNAV82_0063
ART_1575
unknown2350
F913_00916
unknown1657
unknown2544
kfoC
BIT33_05690
J560_3789
unknown1250
aciD
unknown1532
unknown1652
tetR2
coeR
CBI29_01273
RZ95_19555
unknown901
unknown2841
unknown506
unknown2030
unknown456
unknown530
unknown4035
APC94_13650
BGC29_17680
ABAYE1257
IX87_04210
iolE
insB
J635_2239
J518_4296
hmgCl
CHQ89_17785
unknown4384
unknown2323
unknown459
unknown399
unknown1191
fox2
NG19_0035
unknown3529
p3ABAYE0073
J532_3624
rtcA
unknown1487
ABUW_2522
unknown65
unknown1236
unknown2305
unknown630
unknown1703
unknown2565
unknown1596
J560_4459
gpU_2
res
unknown541
unknown1651
qor
J663_1718
unknown7097
unknown2012
J508_1719
Rahaq_5013
ABAYE1810
unknown1480
CIL08_01810
unknown994
NG19_0024
unknown5612
J804_1506
unknown206
CAT00_08615
unknown274
unknown1484
wagN
yefM
unknown640
P23_3681
fdtA
unknown861
ACINNAV57_1173
recE
unknown2234
CBI29_01985
SAMN02799632_02485
m07a_10460
ycjZ
J512_3851
CHQ89_16185
B9X91_13840
ABSDF1012
dadA3
APC94_13580
unknown1940
unknown4360
unknown2601
xylR
unknown452
J532_0288
unknown600
trbJ
C7D81_08045
SG0722
CPI82_00375
cumD
unknown3015
Rahaq_4992
unknown2467
rhlG
F960_00271
resX
J552_4426
Q674_03865
unknown418
unknown1476
unknown683
J529_2023
qhbA
phN
NG19_006
unknown3506
unknown1672
J518_2693
unknown671
unknown2428
unknown32
unknown1510
unknown1625
unknown2139
unknown2885
unknown2205
ABSDF1048
B9X95_16025
unknown1096
ABAYE3221
nahR4
unknown6930
CAS83_17730
unknown2158
BGC29_06940
mod
unknown239
unknown2340
p3ABAYE0051
unknown786
ABSDF1381
yokD
J560_1578
unknown992
unknown873
unknown4819
AOLE_12470
PMI2886
ACIAD1808
IEC338SC_3250
M
p3SP-NDM_0052
unknown647
unknown1694
unknown2995
unknown759
unknown1094
unknown638
yoqD
B9X80_07425
NCTC7364_01192
unknown1775
unknown3881
unknown3220
unknown658
unknown817
unknown4194
unknown2659
CHI95_19290
NE2500
y4tP
unknown4200
ACIRA0001_1655
YA64_14415
APC94_13490
unknown2638
unknown1351
unknown1168
unknown1290
J567_0255
mfd_1
CBI29_01983
unknown741
unknown930
unknown3972
dmpL
unknown1708
unknown159
ABAYE1831
B9X91_09430
SAMN02799632_03271
IL0650
P23_1129
unknown375
unknown526
unknown468
BFR92_00085
B9X95_02540
unknown4285
unknown1599
unknown633
rmlA
frc6
unknown929
sulP
unknown860
CAS83_17775
unknown1070
unknown3971
unknown2112
unknown1643
J596_2734
A0J50_18495
yafQ_1
unknown3882
unknown379
tnpM
ABAYE2887
C7D81_08625
unknown1690
AN158_03485
unknown4383
B4R90_05585
rrrD
merR
unknown744
CHQ89_09905
unknown1477
unknown674
unknown1921
ABAYE2498
atr1
unknown321
bshA
CBE85_19270
unknown3968
C6P87_20020
J512_2082
unknown939
BGC29_17960
unknown1204
BGC29_06950
ABSDF3421
ABAYE2496
CAS83_12150
fosA
MOTT16_09235
unknown4185
unknown5806
hhaIM
unknown1187
unknown1143
entA
unknown1205
unknown570
gsiA1
unknown4215
unknown2944
J560_2386
unknown594
J622_03312
ftsH
BWP00_13290
unknown670
F931_01599
ybgA
P23_0256
ABAYE1851
unknown1595
unknown6386
unknown2128
arpA
unknown6309
F929_03456
galR
J567_1121
unknown10203
unknown521
rzcA
unknown1254
unknown6
J512_0608
yhaI
unknown1521
unknown1246
unknown593
unknown1399
unknown1470
ABAYE2349
ACIAD2763
ABAYE2746
BAV2244
J608_5711
unknown1538
kynB
repC
NCTC7364_03873
unknown2725
unknown2147
lgaE
unknown697
CAS83_16950
A7N09_16485
CAS83_00775
ACINWC487_3012
csy2
unknown590
cadR
C2U32_19365
P23_1090
unknown2368
ABAYE2685
galT
tnsD
unknown2621
ycfQ
K
C1642_11985
p3ABAYE0090
ACIAD2773
mshD
unknown100
unknown1202
unknown442
unknown1517
unknown1689
itrA3
unknown1592
unknown1536
AC058_17440
tat
unknown2031
unknown3976
unknown2111
unknown1129
BJD20_15010
unknown751
unknown3775
ABUW_2662
CR3_2654
unknown2110
CAS83_11275
adc
unknown583
RB3656
unknown2365
fyuA
Aba7804_08050
unknown3782
unknown180
wbjE
myaer87_22900
unknown102
unknown2326
C3F22_16125
gtrOC12
unknown3996
ACIAD3426
floR
unknown203
PMI1250
NCTC7364_00401
NCTC7364_02064
unknown2450
unknown1120
wbxK
unknown427
J518_1188
J524_3711
XCV4104
unknown319
AZE33_16480
J804_2987
A2003_03765
J567_4276
ABAYE0541
cirA
BBEV_3123
unknown2004
unknown1770
BWP00_10000
unknown1920
J532_0286
gsiB
F910_00743
Vcrx041
unknown1771
unknown603
isfD
J532_2709
P
IX87_19890
wecA
unknown19
unknown1488
IEC338SC_3265
unknown1176
unknown3098
J635_3243
unknown628
unknown807
gtrOC13
unknown3778
CIL08_17960
ABUW_0553
HMPREF0012_01806
unknown632
unknown2637
camA
unknown1648
IX87_20010
BIT33_12665
A7M90_19455
unknown579
unknown1068
unknown1174
unknown2647
ldc
unknown743
unknown5016
cpnA
unknown4754
ABAYE0845
BF3652
unknown1634
M3Q_pABCC75
CAS83_16935
CAT00_08550
unknown836
unknown616
SAMN05444586_101864
rci
J663_1197
unknown1055
unknown4382
unknown4453
unknown1702
unknown1661
ttdA
unknown1545
hpaD
umuC
CAT00_08350
BVG18_16310
unknown634
unknown1551
unknown4500
LV38_03026
BCAM0550
F950_00217
unknown2277
unknown834
icaB
NCTC7364_03859
cpaA
unknown1133
unknown1411
BEI_0565
soxB
ABSDF1049
J804_3001
unknown2897
TTE2114
gtr22
unknown531
unknown3
unknown1334
T630_2381
orf46
gltP
APD06_01030
unknown1502
unknown1207
APC94_13810
unknown2540
unknown3848
unknown3567
IX87_21265
NG19_005
AB895_3159
unknown655
BGC29_11875
unknown272
kstR2
unknown2685
J804_3991
unknown1609
unknown649
NCTC7364_03900
unknown2337
slsA
atzA
unknown93
AZE33_18745
seuA
unknown1839
SAMN04489801_5922
J506_0132
CBO1698
KPK_2148
unknown465
unknown155
NG19_0027
unknown2334
cusA
unknown518
PMI0526
CBI29_01277
CAT00_08695
orf20
R485_62
NCTC7364_01455
unknown767
CAS83_06890
unknown512
unknown1740
BIT33_15780
aidB
unknown1782
unknown307
H125_17024
ABAYE2725
unknown615
P23_2476
PTE_02052
yjhX
ABAYE0494
ACIAD1078
GSU1363
F918_01738
unknown9430
unknown837
insK
A7M90_18675
unknown4013
08
CAS83_13660
ABAYE2743
unknown826
unknown34
A7M90_15910
unknown1344
unknown1495
ABAYE2651
J504_3510
unknown555
F938_03652
unknown1420
BGC29_11360
unknown483
wecB
fimD
mbl1
unknown622
CAS83_05290
ABSDF0705
tfdF
unknown1512
PHG299
gtr17
NG19_0054
atlA
P23_0662
J512_0623
unknown2150
J560_4103
chiIII
unknown1262
IEC338SC_3272
glo1
unknown1525
pYS10020
BGC29_07020
unknown766
NCTC7364_03938
hhoB
J635_1960
CAT00_08700
BIT33_18715
pnpR
unknown1061
P23_2472
ciss_07560
THICB3510083
unknown1296
CHQ89_00250
unknown1520
ABSDF1020
ABAYE1234
unknown1097
B9X62_05805
OTT_0503
ydiP
atr7
unknown1144
NCTC7364_03888
F972_00004
C1642_17535
ACIAD2200
nicC
unknown1240
NG19_0032
ABAYE3162
blaOXA
Rahaq_4991
unknown296
unknown1248
unknown813
pseG
orf23
J512_2029
ABAYE0543
AC057_18600
slaR
IX87_20255
CAS83_17165
F885_03630
unknown4188
unknown2834
unknown1623
unknown1308
unknown2347
ABUW_1251
J532_2345
ABAYE0567
asnB
unknown1685
BEN76_14365
unknown758
J658_3561
unknown3970
unknown588
unknown686
NG19_0040
comP
unknown41
ABSDF2760
PSHAa1256
ABSDF2375
hmeg3_22670
unknown3910
epsO
clmA
unknown2699
CV948_021000
unknown1374
unknown1478
CYL20_00625
unknown1243
unknown1526
unknown422
unknown181
unknown1056
NCTC7364_00615
J512_1327
unknown2264
ulaF
unknown2899
unknown739
unknown1141
B9X91_20300
unknown3109
Aba7804_20280
unknown927
CAS83_05280
fnr1
hicA
ABAYE2755
unknown5819
amnD
unknown4183
XF_0682
unknown681
unknown1132
ABUW_1398
unknown2361
unknown1298
unknown29
J512_3784
unknown587
exo
pepO
F910_01218
J635_2274
unknown1658
BIT33_02570
damMTase
unknown1105
ispE
unknown1294
bll6428
nanA
BIT33_13430
trbL
unknown1790
APC94_09970
tnsE
ABAYE2654
unknown911
livG
J804_3000
creB
IX87_14870
RZ95_19475
ECA1500
unknown2001
F958_00124
APC94_13550
T630_2882
unknown3774
unknown2482
unknown4207
C7D81_08190
hcaB
unknown1668
J560_3601
J804_2839
unknown2136
unknown2348
unknown79
J512_1987
ABSDF1326
unknown2021
pbR
MCR_0248
unknown1633
BGC29_17985
unknown1316
unknown9423
unknown828
J532_3665
gspH
unknown774
unknown1194
bfpM
T630_2771
unknown2780
ABAYE1255
C1642_05460
APC94_05380
IX87_05890
glxA
gdr
pSD853_174_64
unknown303
unknown1735
A7M90_16065
unknown1654
XCC1327
A7M90_16100
unknown1381
unknown4195
F931_03086
unknown5919
unknown3920
unknown1203
unknown2481
unknown5545
unknown556
unknown156
PMI0894
unknown1928
unknown2208
SAMN05421643_11282
unknown6802
unknown1519
pdsO
unknown1506
unknown547
ABAYE0570
ACIAD0169
J532_3625
pglA
J529_3092
RSSE_p0701
BIT33_04760
unknown2850
J567_2738
T630_2489
C2U32_00715
NG19_0065
unknown33
F913_00974
IX87_19880
F913_02038
A7M79_12125
unknown233
unknown2145
F922_00125
unknown428
insF7
unknown243
BFR91_03440
TOL2_C29860
T630_3834
Vcrx036
unknown10015
unknown2129
unknown621
unknown1119
CBE85_13675
sodA
unknown516
BCAM1814
J633_2889
bet
unknown4551
unknown1787
unknown3372
unknown1699
unknown1970
unknown762
fim
unknown3975
unknown82
J512_1526
p3ABAYE0002
NCTC7364_03887
unknown1321
sll8001
ABAC_0038
AZE33_19420
virB6
unknown2498
unknown718
unknown1126
wagF
alkJ
J567_0862
IX87_10300
exuT
unknown374
unknown1906
unknown1313
unknown1098
unknown685
unknown1675
IX87_19980
unknown537
CBI29_01984
unknown36
unknown1660
unknown2639
J532_1536
yknV
unknown2263
B9X91_12805
A7N09_16465
unknown511
unknown1136
J508_3749
unknown608
unknown657
ASG40_19440
p3ABAYE0099
mphX
unknown2154
prdF
ycdF
unknown1048
A7N09_16345
CBI29_04002
T630_0366
BGC29_02950
unknown1522
J567_2742
cmpD
hpnA
unknown1892
BGC29_15805
unknown4196
rhsD2
unknown1169
ABAYE1256
unknown1612
unknown443
copB_1
BFR91_18585
unknown6945
J584_2847
J635_1959
ygaD1
B9X91_25950
unknown1695
unknown1809
unknown1553
C1751_16620
UE95_19555
unknown439
unknown527
hpaG
unknown500
unknown1611
unknown1137
F962_02818
unknown3974
unknown872
P23_2774
NG19_0023
unknown3484
RZ95_19470
unknown7435
AOLE_14920
unknown498
unknown441
J517_1527
unknown2600
mnaB
SAMN02799632_03247
unknown2996
leg1
CIL08_07560
dgoK
Nwi_3096
CL491_12855
unknown610
J532_3623
A7M90_16105
unknown1414
ABAYE2656
unknown1238
unknown1125
GP
trbK
unknown2452
unknown880
unknown1043
unknown782
P23_0051
unknown2127
unknown843
ABUW_1993
unknown147
J619_02051
APC94_13635
unknown1275
CPI82_10605
p3ABAYE0103
F913_00979
ABAYE1243
unknown1373
B9X91_20325
unknown2558
unknown1727
unknown1662
gspA
unknown3114
vapB
H125_05411
unknown735
F922_03808
lexA
C7D81_08390
unknown2336
K788_0004321
eamB_5
SAMN05880593_12531
unknown580
unknown99
unknown1492
Vcrx030
p4ABAYE0003
BH03430
H125_03629
unknown690
unknown1306
B9X80_14075
unknown1401
unknown2310
ymfN
J635_3497
dpnM
unknown1107
BFR63_09495
HMPREF0010_00004
unknown682
ACIAD1811
p3SP-NDM_0004
BFR63_15040
BS098_19925
bll3773
BPSL0058
rnt_1
unknown1190
unknown139
unknown1646
unknown676
CBI29_04481
unknown623
unknown137
tmrB
unknown1481
unknown3993
unknown4005
unknown1987
A3K93_13925
BGC29_17925
unknown1090
unknown1106
unknown637
unknown1307
M3Q_pABCC42
J804_3019
unknown4744
CBI29_04437
myaer87_29540
unknown3684
B9X95_13105
unknown573
NG19_0045
T630_2392
IEC338SC_0223
PLUA15_450014
unknown2338
galB
unknown619
N24_0338
unknown1081
unknown1498
CAS83_15810
pLM21S1_p115
unknown575
unknown796
J506_0421
unknown1743
unknown1329
J518_2429
J715_3338
unknown746
xecD
AB994_3892
J560_1852
ABSDF2510
unknown1486
unknown138
unknown1550
J580_2706
unknown2328
unknown2884
unknown2358
unknown2886
BEN76_14345
unknown2003
unknown2553
unknown602
C2U32_02050
frsA
nrdF
PMI0316
C3F22_04700
BIT33_09815
unknown4974
unknown607
AW12_00619
FI
J584_1020
fcuA
unknown4009
moeA_2
unknown1985
ACINNAV82_0990
unknown177
unknown6184
bfrG
bgla_2g19270
yngG
unknown2473
unknown1567
unknown3779
unknown5937
unknown651
cas1
unknown4193
unknown714
BIT33_12670
hpxR
unknown1935
J560_4028
qor1
fahA1
cfa2
ABAYE0121
unknown1252
AB994_3867
unknown862
unknown3725
unknown1041
qdoI
J517_1311
J507_1251
unknown4746
t4544
PRMTH_006
unknown680
unknown510
APC94_14000
unknown1079
CAT00_08495
unknown1616
unknown6929
J524_4293
A7M90_19465
unknown852
epsJ
unknown1683
unknown1419
HMPREF0010_03592
Aba7804_11365
unknown1263
pimA
elb7
unknown1557
Bpet1327
A7M90_18775
AB994_3894
CIL08_00210
HMPREF0017_01849
unknown1677
unknown642
SAMN02799632_03081
mcbB
aac6'
unknown2510
ABAYE1262
J506_3925
unknown298
unknown1568
p3ABAYE0104
unknown679
unknown2327
ABAYE0550
BEN76_14325
ACIAD0320
J512_3301
J663_1025
unknown1772
unknown2684
CAS83_04885
unknown2900
unknown1529
ACIAD1781
NMA1343
pA_00024
CJ183_03630
per1
unknown1485
RSc1931
unknown1111
unknown756
unknown1788
ytxE
unknown691
LV38_03964
II X
unknown2096
unknown1614
Z1337
sauU_1
unknown3978
SIRAN9543
BIT33_18895
trkA
icaR
unknown503
unknown3780
CAT00_14580
unknown6111
ret
unknown297
unknown564
ecpD
unknown1678
J804_2995
ABAYE0569
ACIAD1806
p3SP-NDM_0053
unknown520
unknown6836
ASE40_00645
nicP_7
unknown812
CAT00_08320
unknown2668
unknown592
unknown2686
J567_1282
unknown719
AL533_11660
NCTC7364_02749
ABZJ_02848
phoA1
unknown1671
unknown585
unknown37
ABAYE2518
ABAYE1225
unknown4187
unknown2440
M3Q_pABCC40
PKB_0573
M3Q_pABCC72
unknown2141
CBI29_01973
NCTC7364_03860
lgaB
unknown1131
aciC
CBI29_00257
unknown2199
unknown1803
unknown24
rfbA
ACIAD3112
gtrOC21
RPE_2269
unknown799
unknown514
ABAYE1818
ABAYE1238
NG19_009
unknown523
unknown3528
creC
epsD
unknown1644
unknown748
unknown1874
unknown40
ABAYE1254
dnaB_2
M3Q_pABCC7
PMI0312
F910_02967
unknown1279
unknown457
dkgA
unknown664
pCf587_0159
kpsD
unknown1528
unknown856
unknown606
unknown710
hnhC
bll6424
unknown80
unknown1104
AZE33_13190
unknown1100
lgaF
unknown3966
NG19_0080
unknown1139
ttr
qnr
sctP
himA
unknown2200
J663_1930
CBI29_04436
unknown2280
SAMN05444586_10783
SAMEA2273122_03643
J733_2016
J658_1267
ABSDF1045
A7N09_18470
J567_0879
unknown1639
J517_2052
BGC29_16415
unknown2455
NG19_004
unknown279
P23_2943
BGC29_17940
unknown348
unknown4284
CBE85_01355
T630_2669
T630_3315
unknown3508
unknown2648
unknown5128
unknown646
DLM_1107
J567_3085
unknown1095
unknown2331
pA_00088
CAS83_17745
unknown2566
A7N09_22430
T630_2776
unknown2438
ORF4
AB994_3885
CAS83_11310
unknown157
unknown2140
unknown1745
unknown1879
unknown30
istB
tniE
J658_4017
unknown599
ABSDF1812
ABSDF2498
unknown3533
BGC29_03460
NCTC7364_03912
MCR_0249
unknown641
gtr14
unknown853
IX87_07830
A7M90_18530
F885_03612
unknown653
p3ABAYE0040
ligK
rbn
hth
unknown2524
gtr32
unknown1647
T630_0618
ABAYE1850
ACINWC136_2481
cadA
unknown20
J529_1144
unknown1792
BGC29_00515
pCf587_0055
J715_2135
kptA
unknown92
unknown1949
unknown2848
unknown753
p3ABAYE0044
unknown4509
unknown1234
unknown1369
unknown864
J560_1135
legF
unknown1475
unknown4159
unknown1986
C7D81_08635
trwB
ABAYE1353
unknown620
J804_3940
CSB70_0034
repB
ACNJC6_00805
J635_3135
T630_1368
ABUW_0760
unknown244
unknown905
J560_2384
unknown86
MDS_3582
A7M90_16030
unknown4012
IX87_20020
unknown89
unknown1810
pQBR0407
ABAYE3220
unknown1701
intA_6
CAS83_17820
IEC338SC_3275
unknown1558
unknown10366
unknown1293
BGC29_07040
flbD
BGC29_17915
kstR
J518_0070
unknown373
unknown1563
F958_01806
unknown2479
J560_1571
CAS83_10165
unknown2913
unknown179
BIT33_00165
unknown6931
unknown1524
NG19_0069
unknown2353
MWQ_15152
unknown1192
unknown1065
T630_1336
aciB
unknown1489
NG19_0066
unknown1676
unknown763
unknown377
MU9_1872
15
ABAYE0565
unknown315
B9X91_08235
unknown3252
LV38_02417
unknown304
unknown1247
tonR2
unknown1057
unknown4265
CBI29_04411
unknown410
unknown716
unknown932
J584_2863
unknown809
ABAYE2520
APC94_11545
CIL08_17950
unknown2883
NCTC7364_03872
unknown548
J658_1287
unknown3777
unknown3875
NG19_0067
CAS83_11365
unknown142
J596_0619
ABSDF1752
pkn1_2
BFR81_01280
gtr15
unknown1580
moeZ
p3ABAYE0065
A7N09_16105
unknown1039
ACINWC487_2719
unknown3981
ABAYE0506
fhaC
pI2-53TF_00037
T630_2386
unknown2157
unknown4161
unknown4717
NG19_0085
unknown1696
unknown2313
unknown1161
azoB
unknown376
nphR_1
H125_03579
unknown1707
ABSDF0520
tetR1
BGC29_05520
unknown1682
B9X95_02445
PROAA_1240001
J529_0331
unknown1103
p3ABAYE0092
unknown4083
J560_3439
unknown1259
J596_4191
unknown2491
CAT00_08520
AC057_16250
unknown1052
ttdB
CAS83_17170
unknown675
ACIAD0321
A7M90_18685
unknown2464
unknown711
unknown586
C2U32_19335
J517_3420
BAA96_1p0027
unknown1938
BGC29_01835
NG19_0033
unknown1533
unknown517
T630_2369
p3ABAYE0067
unknown802
unknown3991
p2ABAYE0010
Aba7804_04935
