ybhR
BGC29_03470
unknown326
ywrO
ACIAD3165
papC
J524_1636
unknown73
T630_3940
J524_1656
ABAYE3785
ABSDF1956
arnC
vanK
novR
lip2
C5H40_19395
cobB
tipA
unknown123
C5H40_19485
unknown1271
unknown1319
APC94_07845
ABAYE3084
J518_3345
unknown951
fhaB
IX87_18805
unknown877
unknown115
unknown957
PA2757
hisP
T630_4178
higB
unknown114
J567_3338
ycgF
paaN
ABAYE2235
NCTC7364_01155
AL533_05850
ABAYE1779
unknown6941
ABAYE2752
unknown10375
nemA
ABAYE1492
C5H40_19300
unknown982
J524_1688
cynX
unknown954
ABAYE2400
J608_1921
unknown462
ABUW_4010
T630_1546
unknown60
ABSDF2346
mscM
mlr4086
lpsC
unknown213
pqiA
A7M79_14845
ABAYE3832
yhgD
nrtR
unknown185
unknown151
CPI82_13765
ABAYE2604
unknown209
hcaG
strB
ABAYE1488
J567_3216
unknown463
ABAYE1500
ABAYE2273
unknown912
unknown567
unknown937
NCTC7364_01637
T630_1876
unknown430
BGC29_11355
ABAYE1968
Hap62p39
unknown752
Alfi_3036
ACINNAV57_0854
pho2
modC
ABAYE1228
unknown1288
unknown977
F910_02566
C5H40_19495
B9X91_10420
unknown398
unknown148
pcaJ
osmB
Y1024
oxa23
A7N09_27995
copS
J567_0118
unknown1158
ata
CBB96_01100
ABAYE1073
bigR
M3Q_pABCC48
unknown1
B9T28_01780
unknown1270
argT
unknown299
antC
BGC29_19355
unknown192
unknown404
dnaS
J804_3663
J518_2608
SAMN02799632_03278
T630_2706
C5H40_19250
ttdR
ompA
iorA
int
filB
unknown268
dam
nicP_2
traB
unknown1613
unknown605
CAS83_17035
unknown194
unknown198
unknown1053
unknown330
CAT59_07295
hit
psaE
ABAYE0983
unknown559
unknown971
J552_4272
csuD
bphB
unknown314
orf4
unknown976
lao2
ABAYE2717
ABSDF0098
feaR
unknown5476
aadB
unknown1304
azo1872
unknown10355
BIT33_01290
pksN
unknown417
unknown1149
dcaK
lsgF
unknown434
Cj0555
J506_3120
sulI
lutR
phnS
tuf
unknown476
AB237_0995
F986_00528
pseB
alkT
ORFX
unknown202
unknown178
puuP
ABUW_0800
sup
lec
ABAYE2440
unknown928
T630_1965
ABAYE2611
ABAYE2002
unknown931
C5H40_19585
T630_2781
Dsui_0193
gph_3
M770_31025
traU
C5H40_19290
y4mN
tniB
unknown383
BegalDRAFT_1777
J596_2601
unknown305
XAC1424
J608_5686
tnpB
ABUW_4017
unknown385
yczJ
CPI82_03580
traN
pucI
unknown212
gtrOC8
gbd3
unknown136
unknown6842
unknown186
C5H40_19500
unknown117
ABAYE2633
unknown120
mprA
fabF
A7N09_17210
A7A65_02220
J608_2822
A7A65_13525
J608_2741
J524_1651
unknown966
icmF
tatD
unknown808
rcr1
pilX
J567_2910
J532_0248
J596_3559
A7A65_14720
dnaC
aleB
styA
ispZ_1
IX87_03630
vanP
paaX
unknown480
SAMN02745664_12425
unknown960
ephA
araB
T630_0987
unknown163
wzx
Achr_f200
unknown7114
unknown382
ABZJ_00934
BGC29_10605
purK
hmuV
T630_0362
tauB
NCTC7364_03396
unknown544
phnX
J567_3287
A2W44_10480
M3Q_pABCC46
ABUW_4081
ABZJ_01433
ABAYE0974
unknown956
ABAYE1437
C5H40_19245
unknown987
ABAYE3784
J608_1922
mnaA
unknown189
J524_1691
ABZJ_01432
unknown415
unknown913
unknown978
aac3
gloB
A7A65_01840
sciK
hsdR
unknown72
J507_3030
J567_3688
ABZJ_01152
adeT
ABSDF2678
unknown965
unknown474
unknown433
unknown917
P23_2426
curA
unknown356
unknown396
lacA
B9T29_10880
hipO
ABUW_4025
LYS1
ACIAD2196
J524_4061
unknown292
ABSDF1324
CBC_0720
unknown393
ABZJ_00944
unknown333
MWQ_18882
yrkL
unknown235
unknown388
unknown104
hvrA
fnlB
unknown961
unknown724
asaA
yjgN
lolA_2
unknown195
arcD
ppKF707_1156
unknown17
peb3
unknown1759
fadM
unknown1130
M3Q_pABCC82
traE
unknown950
nodS
ybbB
dnaK
unknown414
csuE
BGC29_03695
unknown420
comB
pqqD
unknown970
HALO0130
unknown962
J812_1193
czcN
P23_2222
met13
unknown208
unknown963
paaD
unknown979
unknown221
P23_0317
phrB
unknown568
ACINNAV57_2790
ABSDF1947
hfq
J622_03314
dcaH
J529_2435
ABZJ_01695
C5H40_19665
rarD
T630_4144
pBCA016
ABAYE1611
APC94_09565
unknown479
polC
C5H40_19280
yfkM
acdP
unknown1159
ABSDF1329
unknown365
unknown124
unknown359
APC94_20565
unknown392
C5H40_19275
unknown200
unknown401
kef
ppqB
hvrB
pac
ABSDF0799
unknown477
ABZJ_02101
iifE
mvaB
pNDM-AB_043
unknown1269
insA
unknown985
tniD
catM
copG
paaF
unknown346
otsB
unknown325
ydiA
aspD
cgmA
C5H40_19765
unknown340
pliG
thy1
hpaX
hsdM
copB
AB237_2357
P23_2433
nhaP
ABSDF0707
phnA
unknown150
kipA
fimA
mshB
ABZJ_02791
unknown944
unknown81
ABZJ_01257
unknown968
J608_3888
unknown412
plpA
nicT
unknown10212
bauR
C5H40_19600
Aba7804_07335
plu3515
unknown352
J532_3630
hisM
J804_3307
unknown432
echA
unknown384
BFG52_11045
T630_1528
unknown105
dnaE1
unknown421
unknown478
J517_0064
copA
sdaA
unknown943
ABAYE2217
armA
T630_4171
unknown371
J608_0784
unknown149
M3Q_pABCC58
sacB
A7M79_13640
lgt5
unknown119
unknown366
traA
unknown919
unknown341
ABSDF2517
intS
unknown21
pbuG
dcaJ
unknown367
unknown199
mcbR
ABUW_0449
gudD
ywiE
unknown118
CBO1728
ABAYE2747
unknown161
ABUW_4007
J608_4593
kdgR
yjlD
unknown223
ABAYE2615
ABAYE0970
ethR
J567_0658
ech2
ABAYE2721
ybhF
fcy21
CBE85_14620
T630_4200
ABAYE2420
unknown204
bah
p3ABAYE0043
P23_0613
C5H40_19230
unknown197
doc
ABSDF1016
ABZJ_00737
J524_1666
rob
hnsA
yvoA
J608_1324
ABZJ_02033
Y1010
dcm
A7M79_14555
unknown1272
p3ABAYE0083
PMI1813
BGC29_01010
unknown1264
C5H40_19695
filC
unknown110
pA_00101
ABAYE2357
J508_3243
hpa2
unknown10361
citH
unknown222
C5H40_19240
unknown1152
ABUW_0801
J532_1634
CBI29_00262
M3Q_pABCC8
unknown83
AOLE_09485
gne2
luxA
unknown370
p3ABAYE0022
ywfM
wafG
unknown918
unknown332
pRALTA_0061
ACIAD2788
CBI29_01263
sch_061
p3ABAYE0095
pdhR
menG
BGC29_11305
unknown167
unknown661
asaE
C5H40_19635
AB895_3175
unknown566
traI
unknown2
unknown168
J608_2727
gtrOC2
hcnC
yhdJ
AB237_1909
J524_3503
C5H40_19470
J524_1659
unknown74
M3Q_pABCC29
pfiT
J508_0669
bspRIM
unknown130
vfr
NG19_008
P23_2225
unknown342
ABUW_4072
VV2387
dfrA
apkA
clcA
ABAYE0019
PA2716
unknown191
APC94_08125
paaI
unknown71
C5H40_19160
unknown331
unknown135
atzF
ABSDF0689
unknown984
filA
prpR
rhaS
ABAYE1566
unknown301
ABSDF1698
unknown10297
NCTC7364_03120
hemO
unknown1260
lasR
arp4
paaC
p3ABAYE0096
fdm
unknown974
unknown423
asnC_1
pLM21S1_p120
cdhR
orf1
J633_0229
pglL1
T630_2202
A7M79_06885
unknown1150
ABAYE0438
unknown947
unknown411
J804_3305
T630_4216
ycgI
unknown76
racX
unknown294
gtr4
APC94_08910
ydiF
B9X95_03720
catD
aadA
Q7A_2862
ABAYE1756
unknown329
insC
unknown113
pmrC
yofA
gtr3
rph
tcbE
A7M90_15530
unknown201
C2U32_08565
ABAYE1303
unknown536
pgdH
csp
unknown339
lpxH
mobC
wzy
adeS
unknown546
vraA
ncs1
J608_2861
unknown166
frmR
unknown129
mrkD
bccA
OTEC02_16150
blr3199
bltD
ABAYE2683
unknown981
C5H40_19215
lysl
tnpR
ybaN_1
fepA
J524_4222
ABZJ_01002
unknown98
sndH
cutF
csgD
unknown214
unknown173
gltS
unknown409
traF
ABAYE1876
evpB
higA
unknown68
rhs
unknown1151
SAMN05421643_10567
unknown205
SAMN02799632_03970
unknown10
SAMN05216350_101440
J567_1119
mhpA
T630_1633
A7M79_06535
unknown967
T630_4161
yhcR
unknown219
ytfH
ABSDF1747
pqqE
J508_3124
hcpC_4
traW
kpsS1
paaK
dcaA
T630_1001
p1ABAYE0003
wza
ABZJ_02218
unknown75
AZE33_12090
vanR
unknown426
katB
ABAYE2874
rumB
p3ABAYE0017
unknown234
ygcS
aspT
gcuP
unknown983
p2ABAYE0009
J512_2631
M3Q_pABCC86
ACINWC487_0711
unknown153
csuB
deaD
csuC
unknown435
tnp
nagG
unknown193
unknown611
unknown972
unknown407
unknown116
J608_2827
hibcH
unknown481
ABAYE1316
adeC
wbpE
ECA2876
unknown8
unknown121
ABZJ_02074
unknown980
cmoA
B9X62_15295
unknown5851
ahpF
A7M90_19410
ureR_2
unknown475
unknown107
unknown49
unknown558
traC
msr
pda1
T630_4131
M3Q_pABCC21
dcaC
finQ
unknown78
unknown405
unknown343
xcpX
NCTC7364_02126
unknown424
pgpC
menB
ABAYE2525
psaD
ABZJ_02037
tktB
unknown360
unknown1267
unknown5123
ABAYE1827
pecI
unknown9409
paaZ
pBCA023
hisQ
unknown473
P23_1860
cpo
P23_1288
yhbS
vgrG2
pRL100242
ABZJ_03080
bll7220
fnlC
unknown910
AAV96_09455
AN158_08795
A7M90_15825
ABAYE0968
dcaP
J529_1308
CBI29_01229
arsR
hapE
A7M79_09940
wafW
ABAYE0893
ABSDF1321
lysR
unknown106
lpsE
ABAYE1357
lysR10
soxR
ABAYE3024
P23_0120
bacC
H125_06785
J532_0374
kdgD
C5H40_19450
C5H40_19370
paaA
bcr_2
ACINWC141_3437
C5H40_19520
ABZJ_00241
unknown345
yyaM
tnsB
p3ABAYE0080
BGC29_16425
unknown403
ABUW_4026
unknown563
APC94_09570
unknown921
unknown612
RSc0211
C5H40_19380
T630_1583
ligI
unknown1277
AL532_19270
APC94_01345
unknown293
traL
wbpB
unknown368
ABUW_4014
unknown369
Y1027
J
tssK
gbsA
ynfL
J633_0518
unknown402
ABAYE0502
traD
ABAYE0189
tnpA
dpnA
C5H40_19685
pECR
unknown363
ABUW_4116
ABAYE2143
ABAYE1302
ABAYE2516
ABUW_3186
dcaE
C5H40_19295
unknown390
pA_00044
ybhS
ABAYE1331
afmid
NT90_08695
psaF
unknown975
J529_0312
unknown152
BB2410
unknown54
dcaR
repA
unknown364
filE
unknown295
mmsB
ABAYE3867
J608_2831
ABSDF1799
paaH
tniC
unknown122
unknown215
ABAYE3076
BGC29_11375
unknown184
ABAYE2267
C5H40_19530
soxC
unknown482
unknown381
ABAYE2700
fecR
ABUW_4032
dosP
A7A65_09340
amsE
T630_4199
unknown949
J532_1945
ABAYE0820
yceA
unknown386
C5H40_19715
unknown344
ydfH_2
unknown338
dmoA
tagN
C5H40_19730
pab
choD
J608_3007
unknown351
A7M90_15535
fecD
ABUW_4011
J524_1668
kilA
C5H40_19165
unknown945
unknown908
hcnA
vdh
ABAYE1564
tetR
ripk4
rplQ
yxxF1
C5H40_19170
unknown210
gna
ABAYE1565
unknown362
unknown1261
unknown584
ill4
A7M90_09475
pGDT4_0050
pobA
fbpB
unknown372
unknown562
nifK
SAMN02799632_03733
traH
unknown472
fnlA
unknown337
A7M90_15790
basI
unknown953
lcdH
J524_1686
unknown335
yehB
C5H40_19140
P23_0540
unknown969
unknown350
unknown986
yveA
unknown196
unknown354
unknown77
korB
unknown924
T630_1413
mdlY
unknown1148
catA
PJ15_2329
tniA
acdA_1
limC
unknown1268
unknown909
unknown143
unknown112
davD
ABUW_4039
SAMN02799632_03792
C5H40_19480
J567_2700
cusR
modE
unknown5814
ppKF707_5074
cynR
ACIAD2176
fabA
garD
yqhD
J567_1118
M3Q_pABCC65
dhbA
ABAYE2737
unknown134
unknown539
entB
fadR_3
ABSDF1393
unknown327
p3ABAYE0098
unknown922
dcaS
ABAYE1911
ABAYE3235
pilY
unknown958
F931_01629
unknown406
traK
unknown361
unknown128
Smlt2714
fatA
BGC29_16925
ABAYE2389
AB237_2422
R
BIT33_05175
GA0061082_108125
ABZJ_02038
ant
ABAYE0973
unknown400
BGC29_12600
unknown429
antB
pobR
ABUW_4042
C1642_07110
unknown915
CBI29_01203
adhC
ABZJ_02353
J608_0807
csbB
astC
traG
bzo70-1
pBCA049
AB895_3314
unknown394
unknown190
yeaO
T630_2285
P23_1596
unknown948
unknown923
ygaE
unknown353
unknown349
wafU
yttP
ribN
ABAYE1807
y4mP
allS
mdcG
unknown408
gnaA
wlbB
ilvD1
lasI
T630_2042
nocL
unknown357
pA_00092
Y1034
unknown542
unknown545
AB237_0982
MT0382
J524_3494
aphA1
ABSDF2336
dcaF
unknown946
artP
tauA
unknown448
J608_1511
ABAYE3542
cfiB
ACIAD2183
adaA
ABZJ_00740
Y1030
unknown952
tetA
CMR15_mp10616
dcaY
ttuB
atuA
BS636_15730
J524_3508
unknown557
L
unknown959
SAMN02799632_03788
betL
queH
J622_01163
wafV
fecI
unknown126
unknown431
ABAYE1855
T630_3284
ABAYE2691
traV
ABUW_0797
unknown768
unknown926
unknown207
srpA
kipR
P23_1287
unknown973
unknown416
CSB68_0321
dcaI
C5H40_19440
weeH
T630_2261
hsp31
dmlA
A7M90_15810
adeR
unknown535
P23_1306
ACIAD0212
yejK
J529_4490
unknown380
MAH_2592
araC
unknown328
parE
fxsA
csuA/B
SAMN02799632_00579
unknown355
unknown2022
unknown187
C5H40_19655
ABAYE0220
marR_2
unknown2320
ABAYE2954
impK
unknown70
antA
hcaK
lhpA
yyaP
copC
fhuE
C5H40_19345
unknown955
gbpR
ABSDF1052
ABAYE3070
unknown391
unknown336
catI
unknown1153
A7A65_09335
modB
p2ABAYE0011
A7M90_09320
katA
unknown5180
hemK
A7A65_02995
unknown283
unknown902
unknown238
unknown389
F958_02309
rbcR
tcuB
pilA
adiY
copD
ABAYE2750
pqqC
T630_2277
P23_2798
BGC29_19360
C5H40_19405
APC94_11710
orfA
BGC29_07725
ABUW_4070
cmpC
aph3
trbC
rmpR
AZE33_12085
P23_0642
C5H40_19330
ACBK50_PK50A_0111
orfB
unknown395
Y1031
paaB
unknown560
IMCC20628_04400
ABAYE2708
unknown109
hetI
BB1669
T630_1975
ABAYE1075
J529_1000
T630_4194
APC94_09950
yvaG
aphE
unknown461
CVD06_02480
ABZJ_00717
C5H40_19700
ybgL
qseD
ABAYE2698
unknown419
garP
B9X80_14180
unknown534
relE
act
A7M79_05315
bin3
yclQ_1
A7M79_16865
J506_2875
unknown964
J508_3224
madL
unknown387
mtnN
J608_5954
unknown933
unknown224
ABZJ_00983
PCP27
natA
ypeA_2
unknown665
unknown561
C5H40_19270
unknown925
garR
unknown358
P23_0628
unknown176
C5H40_19575
ncd2
ppKF707_4769
gno
ABZJ_03345
unknown1265
P23_3635
M3Q_pABCC83
M3Q_pABCC32
rusA
pchR
KPK_2583
hcpC
yliI
ycsG
asaB
unknown108
oxsM
pcaF
bepC
ABAYE2000
basD
unknown264
unknown1201
marR
ulaG
C5H40_19660
